SERVER-8991 Assert 13440 (bad offset error) should not be logged as uassert

Also remove unused method DataFile::badOfs2 with assert 13441